<resources>
    <string name="app_name">Leader Election Game</string>

    <!-- Main Activity String -->
    <string name="reside_menu">Main Menu</string>
    <string name="permission_message">Please enable all permission</string>

    <!-- Research Paper String -->
    <string name="button_next_research_paper">Next</string>
    <string name="button_previous_research_paper">Previous</string>

    <!-- Home Fragment String -->
    <string name="text_swipe_right_left_to_open_menu">Swipe right/left to open menu</string>
    <string name="leader_election_game">Leader Election Game</string>

    <!-- Step By Step Fragment String -->
    <string name="button_next_step_by_step">Next</string>
    <string name="button_previous_step_by_step">Previous</string>
    <string name="button_reset_step_by_step">Reset</string>
    <string name="button_start_over_step_by_step">Start over</string>

    <string name="popup_node_winner">Winner: </string>
    <string name="popup_node_referee">Referee: </string>
    <string name="popup_node_candidates_to_referee">Referee selected by: </string>
    <string name="popup_node_participant">Participant: </string>
    <string name="popup_node_id">Node id: </string>

    <string name="title_activity_step_by_step">StepByStepActivity</string>

    <string name="step_by_step_stage_one_caption">Step one: Creating network</string>
    <string name="step_by_step_stage_two_caption">Step two: Participants</string>
    <string name="step_by_step_stage_three_caption">Step three: Referees</string>
    <string name="step_by_step_stage_four_caption">Step four: Election</string>

    <string name="step_by_step_stage_one_explanation">We created network with ten nodes, every node has a random id.</string>
    <string name="step_by_step_stage_two_explanation">All green nodes are taking part.</string>
    <string name="step_by_step_stage_three_explanation">Next each participant needed to choose referees. Nodes with blue border are referees.</string>
    <string name="step_by_step_stage_four_explanation">Now we have our winner.</string>

    <string name="step_by_step_stage_one_algorithm_info" formatted="false">Network size: %d. Each node generates a random rank from {1,...,pow(n,4)} = {1,...,%d}</string>
    <string name="step_by_step_stage_two_algorithm_info" formatted="false">Every node decided to become a participant with probability ((2 * log n)/n) = %4.2f.</string>
    <string name="step_by_step_stage_three_algorithm_info" formatted="false">Every participant samples 2 * ceil(sqrt(n * log10(n))) = %d other nodes (the referees) and sends a message with its own rank to each referee.</string>
    <string name="step_by_step_stage_four_algorithm_info" formatted="false">Referees nominated node with id: %s as winner.</string>

    <!-- About Fragment String -->
    <string name="text_about">The main aim of this project is to show the problem with leader election algorithm using Java development on Android devices. Algorithm used for this project will be randomized sublinear leader election which is distributed among the participants through a group of n nodes. \n\n
    Leader Election is one of the most fundamental problems in distributed systems. The idea is to select one of the nodes in the network as a leader and let it solve the critical problem of the day and then just convey the solution to the rest of the network. This problem first occur in token ring network introduced by Le Lann (1977). \n\n
    Leader election algorithm has 99% of correctness however there is great probability that it can fail in smaller networks. \n\n
    All nodes start with the same state not-elected. One node has to decide that is the leader. This then is given special status as a variable leader of the given n-nodes available. All the rest of the nodes on the network has to change their variable to non-leader. This nodes need to know the identity of the leader. \n\n
    If one node in the network resigns for some reason algorithm should recognise loss of the node and avoid the deadlock by removing this node from the network without breaking the cycle.\n\n
    This algorithm will use synchronous communication, each node can send only one message. Each node taking part will start up together at the same time upon execution. Some nodes would act as a referee and some other as a candidates. \n\n
    Every node can send and receive at the most one message to it neighbour however sent message has to be received in the same round only. In the first round each node taking part will become candidate. The referee will notify the candidate of win and it became the elected leader. \n\n
    The algorithms use a birthday paradox type argument to show that a unique candidate node wins all competitions with high probability.</string>

    <!-- Leader Game Fragment String -->
    <string name="server_connection_error">Error occurred - unable to connect server. Please try again.</string>
    <string name="button_new_game">New game</string>
    <string name="button_game_in_progress">In progress...</string>
    <string name="network_connection_error">It seems your device has no Internet connection - game may not work properly... Please, try to establish network connection and try again.</string>
    <string name="network_connection_info">Leader Election Game needs Internet connection to communicate with the game server. Checking devce network state...</string>
    <string name="network_connection_ok">Internet connection seems ok. Press New Game button to join Leader Election Game.</string>
    <string name="game_server_connection_error" formatted="false">Server did not respond properly - timeout... Please, check if these parameters are correct. IP address: %s, port: %d</string>

    <!-- About Fragment String -->


    <!-- Advanced Fragment String -->
    <string name="advanced_caption">In this section we`re trying to measure performance of the Randomised Leader Election Algorithm. Please select network size and number of algorithm`s run from lists below and tap Run button to see results.</string>
    <string name="network_size">Network size:</string>
    <string name="algorithm_runs">Number of runs:</string>
    <string name="advanced_select_network_size_prompt">Select network size here</string>
    <string name="advanced_select_runs_prompt">Select number of algorithm`s run here</string>
    <string-array name="advanced_network_size_arrays">
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
        <item>100000</item>
        <item>1000000</item>
    </string-array>
    <string-array name="advanced_algorithm_run_arrays">
        <item>1</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>1000</item>
    </string-array>
    <string name="button_run_performance">Run</string>
    <string name="min_node_candidates_percentage">Min candidates %:</string>
    <string name="max_node_candidates_percentage">Max candidates %:</string>
    <string name="avg_node_candidates_percentage">Avg candidates %:</string>
    <string name="referees_number">Referees number:</string>
    <string name="winners_number">Winners number:</string>
    <string name="total_algorithm_run_time">Total time:</string>
    <string name="min_algorithm_run_time">Min algorithm time:</string>
    <string name="max_algorithm_run_time">Max algorithm time:</string>
    <string name="avg_algorithm_run_time">Avg algorithm time:</string>
    <string name="improper_algorithm_params">Algorithm`s input parameters do not seem right. Please choose proper values from the lists.</string>
    <string name="performance_test_in_progress">Performance test in progress. Please wait a moment to see results.</string>
    <string name="performance_test_error">Performance test finished with errors. Please try again.</string>
    <string name="performance_progress_info_init_nodes" formatted="false">Running iteration %d of %d: Initializng network...</string>
    <string name="performance_progress_info_get_participants" formatted="false">Running iteration %d of %d: Looking for participants...</string>
    <string name="performance_progress_info_get_referees" formatted="false">Running iteration %d of %d: Looking for referees...</string>
    <string name="performance_progress_info_nominating_winners" formatted="false">Running iteration %d of %d: Nominating winners...</string>


    <!-- Slider String -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slider_subtitle">How it works?</string>

    <string name="slide_1_title">Home</string>
    <string name="slide_1_desc">Swipe left/right to open menu or click the buttons at the top!</string>

    <string name="slide_2_title">Research Paper</string>
    <string name="slide_2_desc">Read more about the randomized sublinear leader election algorithm!</string>

    <string name="slide_3_title">About</string>
    <string name="slide_3_desc">Read more about the project!</string>

    <string name="slide_4_title">Leader Game</string>
    <string name="slide_4_desc">Play leader election algorithm multiplayer game!</string>

    <string name="slide_5_title">Step By Step</string>
    <string name="slide_5_desc">Track each stage of leader election algorithm with detailed explanation!</string>

    <string name="slide_6_title">Advanced</string>
    <string name="slide_6_desc">Measure performance of leader election algorithm!</string>

    <!-- Custom -->
    <string name="algorithm_error_too_many_participants">Too many participants (or max id too low).</string>
    <string name="algorithm_error_referee_cannot_nominate_winner">Single referee unable to nominate winner...</string>
    <string name="algorithm_error_referees_cannot_nominate_winner">All referees unable to nominate winner...</string>
    <string name="language_setting">Language:</string>
    <string name="advanced_language_setting">Choose language</string>
    <string name="btn_change_language">Change</string>

    <string-array name="language_select">
        <item>English</item>
        <item>Polish</item>
		<item>German</item>
		<item>Russian</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_research_paper">Research Paper</string>
    <string name="menu_about">About</string>
    <string name="menu_leader_game">Leader Game</string>
    <string name="menu_step_by_step">Step By Step</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_help">Help</string>


</resources>
